<resources>
    <string name="app_name">Story App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >7 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="not_yet_have_an_account">Not Yet Have an Account? Register!</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="required_field">Required Field</string>
    <string name="login_success">Login Success</string>
    <string name="login_sucess">Login Success</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="not_having_permission">Not Having Permission</string>
    <string name="pick_picture_first">Please pick the picture first</string>
    <string name="failed_showing_camera">Failed Showing Camera</string>
    <string name="setting">setting</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="user_logout">User Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
</resources>