<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_welcome"
    android:padding="8dp"
    tools:context=".view.login.LoginActivity">

    <com.macreai.storyapp.view.customview.EmailEditText
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:alpha="0"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/cyan_900"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.macreai.storyapp.view.customview.PasswordEditText
        android:id="@+id/password_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:alpha="0"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/cyan_900"
        app:layout_constraintEnd_toEndOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="170dp"
        android:src="@drawable/welcome_cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="8dp"
        android:text="@string/not_yet_have_an_account"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>