<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_register"
    android:padding="8dp"
    tools:context=".view.register.RegisterActivity">


    <com.macreai.storyapp.view.customview.NameEditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/cyan_900"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.macreai.storyapp.view.customview.EmailEditText
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:drawableLeft="@drawable/baseline_mail_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/name_text"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <com.macreai.storyapp.view.customview.PasswordEditText
        android:id="@+id/password_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="244dp"
        android:layout_height="323dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_mobile_login_re_9ntv" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>